add my own embed game and rename cert

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </header>
 
       <section class="conclusao">
-        <h2 class="aluno">Juliana Negreiros</h2>
+        <h2 class="aluno">Gabriel Zanatto Salami</h2>
 
         <p class="conclusao-texto">
           Você concluiu a
@@ -44,7 +44,7 @@
             outros cursos de desenvolvimento de jogos na Alura
           </a>.
         </p>
-        <iframe src="https://editor.p5js.org/alura/embed/DtcUcnUnh"></iframe>
+        <iframe src="https://editor.p5js.org/gabriel.zanatto2/embed/M1VebX1Et"></iframe>
       </section>
 
       <footer class="assinaturas">
