--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
           <a href="https://www.alura.com.br/cursos-online-programacao/jogos" class="conclusao-link">
             outros cursos de desenvolvimento de jogos na Alura
           </a>.
+          <a href="https://editor.p5js.org/gabriel.zanatto2/embed/M1VebX1Et" class="conclusao-link">
+            Jogar em tela cheia
+          </a>
         </p>
         <iframe src="https://editor.p5js.org/gabriel.zanatto2/embed/M1VebX1Et"></iframe>
       </section>
