add "jogar em tela cheia" link

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           Aqui está o seu jogo e
           <a href="https://www.alura.com.br/cursos-online-programacao/jogos" class="conclusao-link">
             outros cursos de desenvolvimento de jogos na Alura
-          </a>.
-          <a href="https://editor.p5js.org/gabriel.zanatto2/embed/M1VebX1Et" class="conclusao-link">
+          </a>.<br>
+          <a href="https://editor.p5js.org/gabriel.zanatto2/embed/M1VebX1Et" targe="_blank" class="conclusao-link">
             Jogar em tela cheia
           </a>
         </p>
